Functionality for Issue
[WIP] this functionality needs testing.

--- a/public/index.html
+++ b/public/index.html
@@ -381,10 +381,10 @@
             <a class="button" id="cardButton" style="border-color: rgb(61, 61, 190);" href="https://vaki.co/vaki/JuntosSalimosAdelante?fbclid=IwAR0PmYg6RTfFT93z8JFH_LSIc2ID_BrDnmWuNLBjgYM4D803agefnL-Ulw8" target="_blank">Ir a la página</a>
           </div>
       </div>
-      <form>
+      <form id="possible-foundation-form">
         <br>
         <label for="link">¿Conoces alguna otra iniciativa? Envíanos el link acá</label>
-        <input type="url" id="link" placeholder="https://www.helplinkherepleaseyourock.life" required/>
+        <input type="url" id="link possible-foundation-link" placeholder="https://www.helplinkherepleaseyourock.life" required/>
         <input type="submit" id="submitButton" name="submit" class="button">
       </form>
     </section>
