Functionality and Front End
Added the functionality to connect with the firebase functions and the space to add the region in the form.

--- a/public/index.html
+++ b/public/index.html
@@ -81,12 +81,12 @@
     <!-- SEND MESSAGE -->
     <section id="message" style="display: none;">
       <h3>¡Gracias por apoyar a los trabajadores de la salúd en tu área!</h3>
-      <form id="contact-form">
+      <form id="message-form">
         <label for="writtenMessage">Escribe tu mensaje de aliento:</label>
         <textarea type="text" id="writtenMessage" name="writtenMessage" class="textArea" rows="5" cols="20" placeholder="Thank you Message!" required></textarea>
         <label>Porfavor danos tu:</label>
-        <label for="firstName">Nombre:</label>
-        <input type="text" id="firstName" name="firstName" placeholder="Clapper McClapper" class="textInput" required>
+        <label for="remmitent">Nombre:</label>
+        <input type="text" id="remmitent" name="remmitent" placeholder="Clapper McClapper" class="textInput" required>
         <label for="country">País:</label>
         <select type="" id="country" name="country" placeholder="Your Country" class="selectInput" required>
             <option value="Afghanistan">Afghanistan</option>
@@ -334,6 +334,8 @@
             <option value="Zambia">Zambia</option>
             <option value="Zimbabwe">Zimbabwe</option>
         </select>
+        <label for="region">Región/Ciudad:</label>
+        <input type="text" id="region" name="region" placeholder="Clapping State/ Clap City" required>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" placeholder="iloveclapping@ireallydo.com" required>
         <div style="display:inline-flex;">
